# base

./: README.md  flake.nix  pyproject.toml
nix/: devShells.nix  shared.nix
pythonedaartifactapplication/: application.py
pythonedaartifactapplicationgittagging/: application.py  git_tagging.py  pythoneda-artifact-application-git-tagging.py
